benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_int_ModExpPow2_int_iter8_error.log
=== Verification Error - Iteration 8 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_int_ModExpPow2_int.rs
Time: 2025-09-15 19:38:13

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:31:13
   |
31 |   if exp == 0 {
   |      ---    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:32:5
   |
26 | exec fn mod_pow(base: nat, exp: nat, m: nat) -> (res: nat)
   |                                                       --- expected `vstd::prelude::nat` because of return type
...
32 |     1
   |     ^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:34:36
   |
34 |     let half = mod_pow(base, exp / 2, m);
   |                              ---   ^ expected `nat`, found integer
   |                              |
   |                              expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:36:14
   |
36 |     if exp % 2 == 1 {
   |        ---   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:36:19
   |
36 |     if exp % 2 == 1 {
   |        -------    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:55:14
   |
55 |   if temp == 0 {
   |      ----    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:59:16
   |
59 |   while temp > 0
   |         ----   ^ expected `nat`, found integer
   |         |
   |         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:63:15
   |
63 |     if temp % 2 == 1 {
   |        ----   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:63:20
   |
63 |     if temp % 2 == 1 {
   |        --------    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:68:19
   |
68 |     temp = temp / 2;
   |            ----   ^ expected `nat`, found integer
   |            |
   |            expected because this is `vstd::prelude::nat`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:31:13
   |
31 |   if exp == 0 {
   |      ---    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:32:5
   |
26 | exec fn mod_pow(base: nat, exp: nat, m: nat) -> (res: nat)
   |                                                       --- expected `vstd::prelude::nat` because of return type
...
32 |     1
   |     ^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:34:36
   |
34 |     let half = mod_pow(base, exp / 2, m);
   |                              ---   ^ expected `nat`, found integer
   |                              |
   |                              expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:36:14
   |
36 |     if exp % 2 == 1 {
   |        ---   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:36:19
   |
36 |     if exp % 2 == 1 {
   |        -------    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:55:14
   |
55 |   if temp == 0 {
   |      ----    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:59:16
   |
59 |   while temp > 0
   |         ----   ^ expected `nat`, found integer
   |         |
   |         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:63:15
   |
63 |     if temp % 2 == 1 {
   |        ----   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:63:20
   |
63 |     if temp % 2 == 1 {
   |        --------    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_ModExpPow2_int_impl.rs:68:19
   |
68 |     temp = temp / 2;
   |            ----   ^ expected `nat`, found integer
   |            |
   |            expected because this is `vstd::prelude::nat`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0308`.
